Update DealService.java